Finalizing the basic template

--- a/main.tex
+++ b/main.tex
@@ -80,7 +80,7 @@
         \pagenumbering{arabic}
         \include{sections/pre_text/capa}
         \include{sections/pre_text/folha_rosto}
-        % \include{sections/pre_text/ficha_catalografica}
+        \include{sections/pre_text/ficha_catalografica}
         \include{sections/pre_text/folha_aprovacao}
         \include{sections/pre_text/resumo}
 
@@ -88,6 +88,14 @@
         \thispagestyle{empty}
         \newpage
         \section{Introdução}
-            lol
-            \subsection{Explaining Lua\TeX: Where to start?}
+            \newpage
+            \subsection{Sub-capítulo}
+                \newpage
+        \section{Objetivos}
+        \newpage
+        \section{Fundamentação Teórica}
+        \newpage
+        \section{Metodologia}
+        \newpage
+        \section{Referências}
     \end{document}
