--- a/sections/pre_text/ficha_catalografica.tex
+++ b/sections/pre_text/ficha_catalografica.tex
@@ -20,10 +20,10 @@
 	\singlespacing
 	\hspace{0.5cm}
         \KEYWORDS
-		I. Orientador.
-		II. Universidade xxx.
-		III. Faculdade de xxx.
-		IV. Título 			
+		I. \TEACHER.
+		II. \ACADEMY.
+		III. \COURSE.
+		IV. \DOCTITLE 			
 	\end{minipage}}
 	\end{FlushLeft}
 \end{fichacatalografica}
