--- a/main.tex
+++ b/main.tex
@@ -26,19 +26,17 @@
         Faculdade Senac Blumenau
     }
     \newcommand{\COURSE}{
-        Graduação em Análise e Desenvolvimento de Sistemas
+        Graduação em SEU CURSO
     }
     \newcommand{\AUTHORS}{
-        Marcel E. Cattaneo \\
-        Arthur Klung \\
-        Rodrigo Lessa \\
-        Lucas
+        Nome Sobrenome \\
+        Nome Sobrenome 
     }
     \newcommand{\SURNAMES}{
-        CATTANEO, Marcel / KLUNG, Arthur / LESSA, Rodrigo / Lucas
+        SOBRENOME, Nome / SOBRENOME, Nome
     }
     \newcommand{\TEACHER}{
-        Diego Pasqualini
+        NOME PROFESSOR
     }
     \newcommand{\DOCTITLE}{
         como a computação em nuvem irá \\
