--- a/main.tex
+++ b/main.tex
@@ -26,17 +26,19 @@
         Faculdade Senac Blumenau
     }
     \newcommand{\COURSE}{
-        Graduação em SEU CURSO
+        Graduação em Análise e Desenvolvimento de Sistemas
     }
     \newcommand{\AUTHORS}{
-        Nome Sobrenome \\
-        Nome Sobrenome 
+        Marcel E. Cattaneo \\
+        Arthur Klung \\
+        Rodrigo Lessa \\
+        Lucas
     }
     \newcommand{\SURNAMES}{
-        SOBRENOME, Nome / SOBRENOME, Nome
+        CATTANEO, Marcel / KLUNG, Arthur / LESSA, Rodrigo / Lucas
     }
     \newcommand{\TEACHER}{
-        NOME PROFESSOR
+        Diego Pasqualini
     }
     \newcommand{\DOCTITLE}{
         como a computação em nuvem irá \\
