--- a/sections/pre_text/resumo.tex
+++ b/sections/pre_text/resumo.tex
@@ -4,7 +4,18 @@
 \end{Center}
     
 \begin{justify}
-    \lipsum[100]
+    O estudo apresentado retrata, através de pesquisas em artigos publicados referentes ao tema principal,
+     como a utilização da Computação em Nuvem abre espaço à diversos modelos Service as a Service (SaaS), 
+     que possibilita diversos modelos de serviço à serem definidos e incorporados junto à nuvem, 
+     onde possibilita grandes empresas do mundo dos games como a Sony, Microsoft, Nintendo dentre outras, 
+     a explorarem um novo nicho de inovação, que batalha para diminuir custos ao cliente final, de forma à 
+     expandir a lucratividade de forma mais horizontal, uma vez que para acessar tal tipo de serviço, o 
+     cliente final não precisa comprar uma mídia física para conseguir acessar diversos títulos de jogos. 
+     Conclui-se que o formato “X” as a Service será uma grande tendência em diversas áreas e é possível 
+     que esta revolução chegue a tal ponto, que o cliente final sequer necessite de um console para ter 
+     acesso à jogos com necessidades gráficas avançadas, em um futuro onde o entretenimento dos videogames 
+     poderá ser acessado como um outro serviço qualquer, sem a complexidade de se compreender a infraestrutura 
+     necessária para que tal serviço seja possível e principalmente, acessado por diversos tipos de classes sociais.
 \end{justify}
 {Palavras-Chave: \KEYWORDS}
 \vspace*{\fill}
