updating the work

--- a/main.tex
+++ b/main.tex
@@ -20,16 +20,16 @@
     \usepackage[none]{hyphenat}
     \usepackage{caption}
     \usepackage{microtype}
-    \usepackage[
-        alf,
-        versalete,
-        abnt-emphasize = bf,
-        abnt-etal-list = 3,
-        abnt-etal-text = it,
-        abnt-and-type = &,
-        abnt-last-names = abnt,
-        abnt-repeated-author-omit = no
-    ]{abntex2cite}
+    % \usepackage[
+    %     alf,
+    %     versalete,
+    %     abnt-emphasize = bf,
+    %     abnt-etal-list = 3,
+    %     abnt-etal-text = it,
+    %     abnt-and-type = &,
+    %     abnt-last-names = abnt,
+    %     abnt-repeated-author-omit = no
+    % ]{abntex2cite}
 
     
     % ---------
@@ -42,12 +42,12 @@
     }
     \newcommand{\AUTHORS}{
         Marcel E. Cattaneo \\
-        Arthur Klung \\
-        Rodrigo Lessa \\
+        Arthur Klung Junior \\
+        Rodrigo Gilberto Lessa \\
         Lucas
     }
     \newcommand{\SURNAMES}{
-        CATTANEO, Marcel / KLUNG, Arthur / LESSA, Rodrigo / Lucas
+        CATTANEO, Marcel / JUNIOR, Arthur Klung / LESSA, Rodrigo Gilberto / Lucas
     }
     \newcommand{\TEACHER}{
         Diego Pasqualini
