--- a/sections/texts/fundamentacao.tex
+++ b/sections/texts/fundamentacao.tex
@@ -1,4 +1,5 @@
 \begin{justify}
+    \section{O que é Computação em Nuvem?}
     Segundo Rachid (2019), a computação em nuvem não se enquadra em ser apenas um
     pedaço de tecnologia como um celular ou um computador, ela nada mais é do que um
     sistema online que disponibiliza serviços ao usuário usando como meio de distribuição a
@@ -8,9 +9,8 @@
     A computação em nuvem utiliza hardware (parte física dos recursos de computação) e
     software (parte de digital, de controle das partes físicas) para entregar serviços que podem
     ser acessados de inúmeros dispositivos conectados à rede. Essa computação sob demanda
-    visa compartilhar recursos de computação como processamento, 
-    armazenamento e
-    serviços. Alguns desses serviços podem ser de compartilhamento de vídeos como
+    visa compartilhar recursos de computação como processamento e armazenamento. 
+    Alguns desses serviços podem ser de compartilhamento de vídeos como
     “NETFLIX”, com seu catálogo de filmes e séries, o google com o youtube e o gmail, e
     muitos outros serviços acessados hoje pela internet, recursos do cloud computing.
 
@@ -109,6 +109,6 @@
     no jogo nao quer dizer que o jogador sairá ileso porém pode perder benefícios dentro do
     jogo. \cite{crawford1984art}
 
-
+    \section{Modelo Game as a Service (GaaS)}
 
 \end{justify}
