updating the work

--- a/main.tex
+++ b/main.tex
@@ -20,17 +20,19 @@
     \usepackage[none]{hyphenat}
     \usepackage{caption}
     \usepackage{microtype}
-    % \usepackage[
-    %     alf,
-    %     versalete,
-    %     abnt-emphasize = bf,
-    %     abnt-etal-list = 3,
-    %     abnt-etal-text = it,
-    %     abnt-and-type = &,
-    %     abnt-last-names = abnt,
-    %     abnt-repeated-author-omit = no
-    % ]{abntex2cite}
 
+    % --- CITAÇÂO ABNT --- %
+    \usepackage[
+        alf,
+        versalete,
+        abnt-emphasize = bf,
+        abnt-etal-list = 3,
+        abnt-etal-text = it,
+        abnt-and-type = &,
+        abnt-last-names = abnt,
+        abnt-repeated-author-omit = no
+    ]{abntex2cite}
+    % -------------------- %
     
     % ---------
     % VARIABLES:
