--- a/references.bib
+++ b/references.bib
@@ -31,3 +31,10 @@
   publisher={Osborne/McGraw-Hill Berkeley, CA}
 }
 
+@book{huizinga1971homo,
+  title={Homo ludens: o jogo como elemento da cultura},
+  author={Huizinga, Johan},
+  volume={4},
+  year={1971},
+  publisher={Editora da Universidade de S. Paulo, Editora Perspectiva}
+}
