--- a/sections/texts/fundamentacao.tex
+++ b/sections/texts/fundamentacao.tex
@@ -92,10 +92,10 @@
     \subsection{RECUPERAÇÃO}
     Cada serviço disponibilizado pela computação em nuvem, tem um sistema de backup, que
     armazena e faz backups dos dados dos usuários, fazendo com que o usuário não perca
-    nenhum de seus dados e arquivos. \cite{rashid2019cloud}
+    nenhum de seus dados e arquivos.\cite{rashid2019cloud}
 
     \subsection{JOGOS DIGITAIS}
-    Segundo Huizinga (2003) os jogos são uma atividade lúdica que se utiliza de fenômenos
+    Segundo \cite{huizinga1971homo} os jogos são uma atividade lúdica que se utiliza de fenômenos
     físicos, psicológicos e é o ato voluntário de retirar o participante da vida real, adicionando
     uma tensão ao participante por não saber como será o desfecho do jogo.
 
@@ -110,5 +110,7 @@
     jogo. \cite{crawford1984art}
 
     \section{Modelo Game as a Service (GaaS)}
+
+    Co
 
 \end{justify}
