updating the work

--- a/references.bib
+++ b/references.bib
@@ -38,3 +38,21 @@
   year={1971},
   publisher={Editora da Universidade de S. Paulo, Editora Perspectiva}
 }
+
+@article{albertin2017internet,
+  title={A internet das coisas ir{\'a} muito al{\'e}m as coisas},
+  author={Albertin, Alberto Luiz and de Moura Albertin, Rosa Maria},
+  journal={GV EXECUTIVO},
+  volume={16},
+  number={2},
+  pages={12--17},
+  year={2017}
+}
+
+@article{dospersona,
+  title={Persona: constru{\c{c}}{\~a}o e manuten{\c{c}}{\~a}o da ferramenta na estrat{\'e}gia de marketing de conte{\'u}do},
+  author={dos Santos, Ana Fl{\'a}via Flores and Soares, Val{\'e}ria Deluca},
+  journal={Revista Pr{\'a}xis-Teoria e pr{\'a}tica publicit{\'a}ria},
+  number={1},
+  pages={5--15}
+}
