--- a/sections/texts/fundamentacao.tex
+++ b/sections/texts/fundamentacao.tex
@@ -9,7 +9,7 @@
     A computação em nuvem utiliza hardware (parte física dos recursos de computação) e
     software (parte de digital, de controle das partes físicas) para entregar serviços que podem
     ser acessados de inúmeros dispositivos conectados à rede. Essa computação sob demanda
-    visa compartilhar recursos de computação como processamento e armazenamento. 
+    visa compartilhar recursos de computação como processamento e armazenamento.
     Alguns desses serviços podem ser de compartilhamento de vídeos como
     “NETFLIX”, com seu catálogo de filmes e séries, o google com o youtube e o gmail, e
     muitos outros serviços acessados hoje pela internet, recursos do cloud computing.
@@ -27,7 +27,7 @@
             \noindent
             \footnotesize
             \setstretch{1.0}
-            
+
             \begin{justify}
             Bem, podemos dizer que a Computação em Nuvem é um termo para descrever um
             ambiente de computação baseado em uma imensa rede de servidores, sejam estes
@@ -50,7 +50,7 @@
     armazenamento, conectividades e até sistemas completos para empresa funcionar, que
     ficam disponíveis 24h por dia, 7 dias por semana em servidores físicos ou servidores
     digitais. \cite{rashid2019cloud}
-    
+
     \subsection{INFRAESTRUTURA}
     No quesito de infraestrutura a computação em nuvem disponibiliza diversos modelos de
     hardware para uso online, ela utiliza a virtualização de recursos físicos e os disponibiliza
@@ -63,7 +63,7 @@
     serviços online são bem mais baratos do que adquirir esses recursos físicos, os usuários
     pagam apenas aquilo que quiserem usar e o usuários pode optar por upgrades e
     downgrades nos serviços a qualquer momento.
-    
+
     \subsection{PLATAFORMA}
     Com o serviço de plataforma o cloud pode hospedar tanto o software usado quanto às
     especificações de hardware necessárias para rodar tal aplicação, usando assim pouco
@@ -109,8 +109,48 @@
     no jogo nao quer dizer que o jogador sairá ileso porém pode perder benefícios dentro do
     jogo. \cite{crawford1984art}
 
-    \section{Modelo Game as a Service (GaaS)}
+    \section{Captando dados e construção de Persona}
 
-    Co
+    Com o advento da Computação em Nuvem diversos serviços do tipo \textit{Service as a Service}
+    começaram a serem fomentados uma vez que agora grande coorporações tem a possibilidade de
+    escalonar até mesmo a infraestrutura, pagando apenas pelo que o serviço irá consumir. Com novos
+    serviços surgindo a internet passa a ser um meio que vei além da comunicação para adentrar no
+    mundo da Internet das Coisas que, de acordo com \cite{albertin2017internet} pode ser
+    compreendida como uma rede global que auxilia na integração do mudo virtual com o mundo físico,
+    bem como com equipamentos diversos e até mesmo sensores que podem captar e armazenar dados,
+    deixando estes salvos para um possível interesse corporativo de alguma empresa, prestadora de um
+    serviço especifico.
+
+    Este tipo de pratica não só é útil ao cliente como principalmente para a entidade que fornece
+    o serviço uma vez que, cruzando dados préviamente armazenados e com o concentimento do cliente à
+    nivel contratual do serviço, fazem com que seja possível mapear comportamentos, tendências e até
+    mesmo uma escolha futura para o cliente, fazendo com que vendas sejam ainda mais efetivas e o
+    cliente nesse contexto, se satisfaz ao receber uma possível recomendação de algo que tendenciava
+    a adquirir ou a uma ação que possivelmente iria tomar.
+
+    Com este nível de acesso à informaão dos cliente, empresas que fornecem serviços do tipo
+    textit{SaaS} começaram a montar a textit{persona} dos cliente, mantendo uma relação que pode ser
+    dita até mais íntima onde segundo \cite{dospersona}, deve ser criada uma persona, a partir da
+    coleta de dados e informações úteis que auxiliem na compreensão comportamental do cliente. Isto
+    fez com que a concorrência entre as empresas de cativar o cliente, fosse também em baseada nos
+    dados que estas conseguem captar em seus próprios serviços.
+
+    \subsection{Game as a Service, aproximação com os clientes}
+
+    Não é de hoje que existe uma disputa acirrada entre as gigantes do mundo dos games, é notável
+    por exemplo a concorrência entre a Sony e a Microsoft para manterem seus usuários entretidos
+    ofereendo cada uma delas títulos exclusivos com a ideia de uma possível fidelização do
+    cliente. Para jogar um determinado título ofertado exclusivamente por uma empresa, o cliente
+    deveria adquirir o console desta, bem como a mídia física do título. Este modelo de aquisição
+    acabava segregando as possibilidades dos clientes onde estes atualmente optam por um console
+    apenas e investem um montante expressivo de dinheiro para conseguir jogar.
+    
+    Com a evolução da estrutura da internet e sua capacidade de transmitir dados junto ao novo
+    modelo de serviço SaaS gerando novas tendências de mercado, à exemplo de grande empresas de
+    textit{streaming} de filmes e séries que deixaram a mídia física dos filmes obsoletas e
+    entendendo que a luratividade está na fidelização do pagamento e nao apenas na venda de mídias,
+    as empresas de games começaram a explorar o que podemos chamar de modelo textit{Game as a
+    Service} que tenta seguir com uma assinatura mensal para o cliente ter acesso, onde o valor da
+    assinatura é mais suave do que o montante necessário na aquisição da mídia física.
 
 \end{justify}
