updating the work

--- a/references.bib
+++ b/references.bib
@@ -56,3 +56,9 @@
   number={1},
   pages={5--15}
 }
+
+@article{tristao2020pirataria,
+  title={Pirataria digital de audiovisuais no Brasil: representa{\c{c}}{\~o}es sociais e reflex{\~o}es},
+  author={Trist{\~a}o, Louren{\c{c}}o Kawakami and others},
+  year={2020}
+}
