--- a/sections/texts/fundamentacao.tex
+++ b/sections/texts/fundamentacao.tex
@@ -144,7 +144,7 @@
     deveria adquirir o console desta, bem como a mídia física do título. Este modelo de aquisição
     acabava segregando as possibilidades dos clientes onde estes atualmente optam por um console
     apenas e investem um montante expressivo de dinheiro para conseguir jogar.
-    
+
     Com a evolução da estrutura da internet e sua capacidade de transmitir dados junto ao novo
     modelo de serviço SaaS gerando novas tendências de mercado, à exemplo de grande empresas de
     textit{streaming} de filmes e séries que deixaram a mídia física dos filmes obsoletas e
@@ -153,4 +153,40 @@
     Service} que tenta seguir com uma assinatura mensal para o cliente ter acesso, onde o valor da
     assinatura é mais suave do que o montante necessário na aquisição da mídia física.
 
+    Atualmente empresas como Microsoft, Sony, EA dentre outras, optaram em apostar no modelo            
+    textit{GaaS} um vez que este além de ser lucrativo, oferece ao cliente um valor baixo para          
+    conseguir acessar diversos jogos originais fazendo com que este não busque meios alternativos e     
+    piratas para conseguir jogar em um console desbloqueado, que para as empresas de game, pode ser     
+    considerado um console morto e um cliente que não consome da fonte original.                        
+    O modelo textit{GaaS} de serviço pode tambem ser considerdo um serviço textit{Over The Top} que     
+    encontra-se, segundo \cite{tristao2020pirataria} voltado para os clientes terem acesso a uma        
+    infinidade de conteúdos digitais, a preço de custo acessível dentre os padrões atuais, podendo      
+    ser considerado um valor muito abaixo das mídias físicas.                                           
+                                                                                                        
+    Este tipo de serviço fideliza mais clientes de diversas classes sociais que antes optavam por um    
+    meio alternativo, principalmente em países de terceiro mundo onde a fiscalização é bastante         
+    fraca e este modelo de lucro à partir de direitos autorais mostrou-se antiquado ao surgimento       
+    dos modelos textit{XaaS}.                                                                           
+                                                                                                        
+    \section{Conclusão}                                                                                 
+    Portanto é possível entender que a evolução da internet bem como do computador pessoal, trazendo    
+    novas possibilidades de serviço que fometaram uma evolução profunda junto a estrutura               
+    da computação, criando enfim o que chamamos de Computação em Nuvem, que por sua vez deu início a    
+    uma gama de possibilidade de processamento e armazenamento de dados para ofertar serviços onde o    
+    cliente paga apenas pelo que consome e não mais adquire uma licença para a utilização de um         
+    software, por exemplo.                                                                              
+    Este modelo impactou na forma como as empresas ofertam produtos, muitas delas optaram em            
+    transformar seus produtos em serviços virtuais para ampliar de forma horizontal, a cartela de       
+    clientes, almejando lucratividade a medida que o acesso ao serviço se dá mediante a uma             
+    assinatura em que o cliente poderá assinar ou cancelar a qualquer momento.                          
+    Desta forma, surgem vertentes do modelo SaaS que é o topo da pirâmide (FIGURA 1) da Computação      
+    em Nuvem, que agregam outros tipos de serviço de forma genérica, que não sejam voltados             
+    exclusivamente à computação, como o caso do modelo textit{GaaS}.                                    
+    Por sua vez o modelo textit{GaaS} é benéfico tanto para as empresas como para os clientes pois o    
+    baixo custo da assinatura deste modelo é atrativo aos clientes que não mais optam por meios         
+    alternativos para ter acesso a um título, como por exemplo através de jogos pirata e consoles       
+    desbloqueados, além disso o cliente consegue jogar diversos jogos desde que pague uma               
+    assinatura, que compensa à longo prazo dado o valor absurdo das mídias físicas.                     
+                                                                                                        
+                                                                                               
 \end{justify}
