updating the work

--- a/main.tex
+++ b/main.tex
@@ -46,10 +46,10 @@
         Marcel E. Cattaneo \\
         Arthur Klung Junior \\
         Rodrigo Gilberto Lessa \\
-        Lucas
+        Lucas Tiago Metzner
     }
     \newcommand{\SURNAMES}{
-        CATTANEO, Marcel / JUNIOR, Arthur Klung / LESSA, Rodrigo Gilberto / Lucas
+        CATTANEO, Marcel / JUNIOR, Arthur Klung / LESSA, Rodrigo Gilberto / METZNER, Lucas Tiago
     }
     \newcommand{\TEACHER}{
         Diego Pasqualini
