updating the work

--- a/sections/texts/fundamentacao.tex
+++ b/sections/texts/fundamentacao.tex
@@ -129,7 +129,7 @@
     a adquirir ou a uma ação que possivelmente iria tomar.
 
     Com este nível de acesso à informaão dos cliente, empresas que fornecem serviços do tipo
-    textit{SaaS} começaram a montar a textit{persona} dos cliente, mantendo uma relação que pode ser
+    \textit{SaaS} começaram a montar a \textit{persona} dos cliente, mantendo uma relação que pode ser
     dita até mais íntima onde segundo \cite{dospersona}, deve ser criada uma persona, a partir da
     coleta de dados e informações úteis que auxiliem na compreensão comportamental do cliente. Isto
     fez com que a concorrência entre as empresas de cativar o cliente, fosse também em baseada nos
@@ -147,18 +147,18 @@
 
     Com a evolução da estrutura da internet e sua capacidade de transmitir dados junto ao novo
     modelo de serviço SaaS gerando novas tendências de mercado, à exemplo de grande empresas de
-    textit{streaming} de filmes e séries que deixaram a mídia física dos filmes obsoletas e
+    \textit{streaming} de filmes e séries que deixaram a mídia física dos filmes obsoletas e
     entendendo que a luratividade está na fidelização do pagamento e nao apenas na venda de mídias,
-    as empresas de games começaram a explorar o que podemos chamar de modelo textit{Game as a
+    as empresas de games começaram a explorar o que podemos chamar de modelo \textit{Game as a
     Service} que tenta seguir com uma assinatura mensal para o cliente ter acesso, onde o valor da
     assinatura é mais suave do que o montante necessário na aquisição da mídia física.
 
     Atualmente empresas como Microsoft, Sony, EA dentre outras, optaram em apostar no modelo
-    textit{GaaS} um vez que este além de ser lucrativo, oferece ao cliente um valor baixo para
+    \textit{GaaS} um vez que este além de ser lucrativo, oferece ao cliente um valor baixo para
     conseguir acessar diversos jogos originais fazendo com que este não busque meios alternativos e
     piratas para conseguir jogar em um console desbloqueado, que para as empresas de game, pode ser
     considerado um console morto e um cliente que não consome da fonte original.
-    O modelo textit{GaaS} de serviço pode tambem ser considerdo um serviço textit{Over The Top} que
+    O modelo \textit{GaaS} de serviço pode tambem ser considerdo um serviço \textit{Over The Top} que
     encontra-se, segundo \cite{tristao2020pirataria} voltado para os clientes terem acesso a uma
     infinidade de conteúdos digitais, a preço de custo acessível dentre os padrões atuais, podendo
     ser considerado um valor muito abaixo das mídias físicas.
@@ -166,7 +166,7 @@
     Este tipo de serviço fideliza mais clientes de diversas classes sociais que antes optavam por um
     meio alternativo, principalmente em países de terceiro mundo onde a fiscalização é bastante
     fraca e este modelo de lucro à partir de direitos autorais mostrou-se antiquado ao surgimento
-    dos modelos textit{XaaS}.
+    dos modelos \textit{XaaS}.
 
     \section{Conclusão}
     Portanto é possível entender que a evolução da internet bem como do computador pessoal, trazendo
@@ -182,9 +182,9 @@
     assinatura em que o cliente poderá assinar ou cancelar a qualquer momento.
     Desta forma, surgem vertentes do modelo SaaS que é o topo da pirâmide (FIGURA 1) da Computação
     em Nuvem, que agregam outros tipos de serviço de forma genérica, que não sejam voltados
-    exclusivamente à computação, como o caso do modelo textit{GaaS}.
-    
-    Por sua vez o modelo textit{GaaS} é benéfico tanto para as empresas como para os clientes pois o
+    exclusivamente à computação, como o caso do modelo \textit{GaaS}.
+
+    Por sua vez o modelo \textit{GaaS} é benéfico tanto para as empresas como para os clientes pois o
     baixo custo da assinatura deste modelo é atrativo aos clientes que não mais optam por meios
     alternativos para ter acesso a um título, como por exemplo através de jogos pirata e consoles
     desbloqueados, além disso o cliente consegue jogar diversos jogos desde que pague uma
