--- a/main.tex
+++ b/main.tex
@@ -44,12 +44,12 @@
     }
     \newcommand{\AUTHORS}{
         Marcel E. Cattaneo \\
-        Arthur Klung Junior \\
+        Arthur Klug Junior \\
         Rodrigo Gilberto Lessa \\
         Lucas Tiago Metzner
     }
     \newcommand{\SURNAMES}{
-        CATTANEO, Marcel / JUNIOR, Arthur Klung / LESSA, Rodrigo Gilberto / METZNER, Lucas Tiago
+        CATTANEO, Marcel / JUNIOR, Arthur Klug / LESSA, Rodrigo Gilberto / METZNER, Lucas Tiago
     }
     \newcommand{\TEACHER}{
         Diego Pasqualini
